# substation-inspection-digital-twin

./: .gitignore  AGENTS.md  README.md  requirements-web.in  requirements.in  基于数字孪生与多模态风险感知的变电站智能巡检系统_项目计划.md
artifacts/environment/: SHA256SUMS  ai-pip-freeze.txt  dpkg-packages.tsv  gateway-pip-freeze.txt  node-npm-versions.txt  pytorch-cu126-wheels.tsv  resource-downloads.tsv
artifacts/phase4/: README.md  data-model-verification.json  model-import-report.json  model-load-smoke.json
config/environment/: apt-packages.txt  forbidden-packages.regex  (+2 more)
configs/: devices.yaml  meter_dataset_generation.yaml  meter_reader.yaml  mission_ordering.yaml  risk_weights.yaml
datasets/: README.md  manifest.yaml
docs/: ARCHITECTURE.md  DATA_AND_MODELS.md  DEPLOYMENT.md  HANDOFF.md  INTERFACES.md  PLAN_GAP_ANALYSIS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  TEST_ACCEPTANCE.md  VERSION_MATRIX.md
models/: README.md  manifest.yaml
ros2_ws/src/substation_description/: package.xml  setup.cfg  setup.py
ros2_ws/src/substation_description/substation_description/: __init__.py  asset_registry.py  asset_tf_broadcaster.py
ros2_ws/src/substation_description/test/: test_asset_registry.py
ros2_ws/src/substation_description/urdf/: inspection_robot.urdf.xacro
ros2_ws/src/substation_gazebo/: package.xml  setup.cfg  setup.py
ros2_ws/src/substation_gazebo/config/: bridge.yaml  meter_dataset_bridge.yaml  nav2_params.yaml  scenarios.yaml  slam_toolbox.yaml
ros2_ws/src/substation_gazebo/launch/: meter_dataset.launch.py  substation_mapping.launch.py  substation_navigation.launch.py  substation_world.launch.py
ros2_ws/src/substation_gazebo/maps/: substation.pgm  substation.yaml
ros2_ws/src/substation_gazebo/models/inspection_robot/: model.config  model.sdf
ros2_ws/src/substation_gazebo/models/synthetic_meter/: model.config  model.sdf
ros2_ws/src/substation_gazebo/substation_gazebo/: __init__.py  inspection_poses.py  meter_dataset_generator.py  meter_dataset_package.py  meter_dataset_plan.py  meter_dataset_projection.py  meter_dataset_scene.py  scenario_catalog.py  scenario_manager.py
ros2_ws/src/substation_gazebo/test/: test_inspection_poses.py  test_meter_dataset_generator.py  test_meter_dataset_package.py  test_meter_dataset_plan.py  test_meter_dataset_projection.py  test_navigation_launch.py  test_scenario_catalog.py  test_scenario_engine.py  test_scenario_messages.py
ros2_ws/src/substation_gazebo/worlds/: meter_dataset_world.sdf  substation_world.sdf
ros2_ws/src/substation_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/substation_interfaces/action/: ExecuteInspection.action
ros2_ws/src/substation_interfaces/msg/: AlertAcknowledgement.msg  AssetRisk.msg  AssetRiskArray.msg  InspectionTask.msg  InspectionTaskArray.msg  ManualVelocityCommand.msg  ManualVelocityStatus.msg  RiskAlert.msg  RunContext.msg
ros2_ws/src/substation_interfaces/srv/: AcknowledgeAlert.srv  EmergencyStop.srv  FreezeEvidence.srv  GenerateDiagnosticBundle.srv  GenerateReport.srv  GetReportingReadiness.srv  ListReportingArtifacts.srv  ManageMission.srv  PrioritizeAsset.srv  QueryEvidence.srv  QueryRunTimeMapping.srv  QueueNavigationGoal.srv  ReadEvidenceChunk.srv  RecordRunTimeMapping.srv  ReplanMission.srv  ResetEmergencyStop.srv  SetRobotMode.srv  StoreEvidence.srv
ros2_ws/src/substation_mission/: package.xml  setup.cfg  setup.py
ros2_ws/src/substation_mission/launch/: inspection_executor.launch.py  production_core.launch.py  substation_core.launch.py
ros2_ws/src/substation_mission/substation_mission/: __init__.py  inspection_executor.py  mission_engine.py  mission_node.py  mission_store.py  velocity_arbiter.py
ros2_ws/src/substation_mission/test/: test_core_launch.py  test_inspection_executor.py  test_mission_engine.py  test_mission_node.py  test_mission_store.py  test_velocity_arbiter.py
ros2_ws/src/substation_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/substation_perception/launch/: placeholder_perception.launch.py  production_perception.launch.py
ros2_ws/src/substation_perception/substation_perception/: __init__.py  detection_aggregator.py  detection_contract.py  environment_normalizer.py  meter_reader.py  model_identity.py  placeholder_node.py  production_identity.py  production_nodes.py  yolo_backend.py
ros2_ws/src/substation_perception/test/: test_detection_contract.py  test_environment_normalizer.py  test_meter_reader.py  test_model_identity.py  test_placeholder_launch.py  test_placeholder_node.py  test_production_perception.py  test_yolo_backend.py
ros2_ws/src/substation_reporting/: package.xml  setup.cfg  setup.py
ros2_ws/src/substation_reporting/launch/: reporting.launch.py
ros2_ws/src/substation_reporting/resource/: substation_reporting
ros2_ws/src/substation_reporting/substation_reporting/: __init__.py  evidence_store.py  evidence_store_node.py  report_generator.py  report_generator_node.py
ros2_ws/src/substation_reporting/test/: test_evidence_store.py  test_evidence_store_node.py  test_report_generator.py  test_report_generator_node.py
ros2_ws/src/substation_risk/: package.xml  setup.cfg  setup.py
ros2_ws/src/substation_risk/substation_risk/: __init__.py  risk_engine.py  risk_node.py
ros2_ws/src/substation_risk/test/: test_risk_engine.py  test_risk_node.py
ros2_ws/src/substation_web_gateway/: package.xml  setup.cfg  setup.py
ros2_ws/src/substation_web_gateway/substation_web_gateway/: __init__.py  __main__.py  app.py  ros_adapter.py
ros2_ws/src/substation_web_gateway/test/: __init__.py  test_package_import.py
scripts/: audit_host.sh  capture_environment_lock.sh  check_environment_seal.sh  compile_requirements.sh  download_phase1_resources.sh  evaluate_meter_reader.py  generate_phase3_map.py  import_model_release.py  import_phase4_models.py  init_phase1_run.sh  install_host.sh  rollback_host.sh  setup_gateway_env.sh  setup_python_env.sh  setup_ros_workspace.sh  setup_web_env.sh  smoke_headless_egl.sh  verify_data_and_models.py  verify_documentation_gate.sh  verify_environment.sh  verify_phase1_resources.sh  write_frontend_manifest.py
(+105 files in other folders)
