<?xml version="1.0"?>
<package format="3">
  <name>substation_description</name>
  <version>0.1.0</version>
  <description>Stable robot and substation asset descriptions.</description>
  <maintainer email="jackeyliu37@users.noreply.github.com">jackeyliu37</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
