<?xml version="1.0"?>
<package format="3">
  <name>substation_gazebo</name>
  <version>0.1.0</version>
  <description>Headless Gazebo Harmonic substation simulation.</description>
  <maintainer email="jackeyliu37@localhost">jackeyliu37</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>substation_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>

