<?xml version="1.0"?>
<package format="3">
  <name>substation_interfaces</name>
  <version>0.1.0</version>
  <description>Schema 1 interfaces for substation risk, missions, run context and safety control.</description>
  <maintainer email="jackeyliu37@users.noreply.github.com">jackeyliu37</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
