<?xml version="1.0"?>
<package format="3">
  <name>substation_mission</name>
  <version>0.1.0</version>
  <description>Run context, mission ordering and emergency-stop ownership.</description>
  <maintainer email="jackeyliu37@users.noreply.github.com">jackeyliu37</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>substation_interfaces</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
