<?xml version="1.0"?>
<package format="3">
  <name>substation_web_gateway</name>
  <version>0.1.0</version>
  <description>FastAPI adapter for the substation ROS Web contract.</description>
  <maintainer email="maintainers@ros-server">Substation project</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>substation_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
